# videoSumarizer

./: .env.example  .gitignore  API.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCUMENTATION_SUMMARY.md  Dockerfile  LICENSE  Makefile  README.md  Video_Summarizer_API.postman_collection.json  docker-compose.yml  evaluate_ai.py  nginx.conf  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  seed_data.py  start_dev.sh
backend/: auth.py  config.py  database.py  logging_config.py  main.py  models.py  pipeline.py  ranker_llm.py  ranker_textrank.py  render.py  schemas.py  select_segments.py  services.py  storage.py  transcribe.py  utils.py
data/jobs/test-logging-job/: transcript.json  transcript.srt
frontend/: README.md  index.html  package-lock.json  package.json  script.js
frontend/src/: App.tsx
frontend/src/api/: auth.ts  client.ts  jobs.ts
frontend/src/pages/: DetailPage.tsx  LibraryPage.tsx  LoginPage.tsx  ProfilePage.tsx  UploadPage.tsx
frontend/src/store/: authStore.ts
