[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-summarizer"
version = "1.0.0"
description = "AI-powered video summarization system"
authors = [{name = "Video Summarizer Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.37.0",
    "python-multipart>=0.0.20",
    "pydantic>=2.11.9",
    "openai-whisper>=20240930",
    "faster-whisper>=1.2.0",
    "openai>=2.0.0",
    "scikit-learn>=1.7.2",
    "numpy>=2.3.3",
    "spacy>=3.7.0",
    "python-magic>=0.4.27",
    "psutil>=6.1.0",
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",
    "orjson>=3.9.10",
    "structlog>=24.4.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "black>=24.12.0",
    "flake8>=7.1.1"
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
